# nss-mdns

./: .clang-format  .gitignore  .packit.yml  ABOUT.C  ACKNOWLEDGEMENTS.md  CIRCBUF.C  CIRCBUF.H  COMN.RCI  CTL3DS.LIB  CTLDLG.C  CTLPNL.C  DEBUG.C  DEBUG.H  DISPLAY.C  DISPLAY.H  FILE.C  FILE.H  FILTDLG.C  FILTER.C  FILTER.H  INSTDATA.C  INSTDATA.H  LOGFILE.C  LOGFILE.H  MAKEFILE  MIDIMCBK.C  MIDIMCBK.DEF  MIDIMCBK.H  MIDIMCBK.RC  MIDIMON.H  MIDIOX16.C  MIDIOX16.DEF  MIDIOX16.RC  MIDIOX32.MAK  MIDIOX32.RC  MMRES.H  MSAPI.C  MSCRDLL.H  MSCROLL.C  MSCROLL.H  (+20 more)
.github/: SECURITY.md
.github/workflows/: main.yml
pkg/rpm-fedora/: nss-mdns.spec
src/: Makefile.am  avahi-test.c  avahi.c  avahi.h  bsdnss.c  map-file  map-file.in  nss-mdns.h  nss-test.c  nss.c  nss.h  util.c  util.h
tests/: Makefile.am  check_util.c
